Got OptomizingNavigator working correctly